--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -4,7 +4,7 @@ daysUntilStale: 2
 daysUntilClose: 7
 # Issues with these labels will never be considered stale
 exemptLabels:
-  - translation
+  - weekly-digest
   - security
 # Label to use when marking an issue as stale
 staleLabel: stale
